syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.itmo.mrdvd";
option java_outer_classname = "AuthServiceProto";

import "com/itmo/mrdvd/CommonMessage.proto";

message Credentials {
  string login = 1;
  string password = 2;
}

enum AuthStatus {
  AUTHSTATUS_DEFAULT = 0;
  AUTHORIZED = 1;
  REGISTERED = 2;
  INVALID = 3;
}

message AuthResponse {
  oneof response {
    AuthStatus status = 1;
    AuthID id = 2;
  }
}

service AuthService {
  // Authorizes a user and returns a valid token for future queries
  rpc Login(Credentials) returns (AuthResponse);
  // Registers a new user
  rpc Register(Credentials) returns (AuthResponse);
  // Validates AuthID
  rpc Check(AuthID) returns (AuthResponse);
}